# vibe-coder

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UI_MOCKUP.md  config.example.toml
.github/: copilot-instructions.md
scripts/: setup-precommit.sh
src/: lib.rs  main.rs
src/ai_providers/: mod.rs
src/parser/: mod.rs
src/plugins/: mod.rs  sample_plugins.rs
src/ui/: mod.rs
tests/: README.md  ai_providers_e2e.rs  configuration_e2e.rs  export_e2e.rs  integration_e2e.rs  plugins_e2e.rs  session_history_e2e.rs
tests/common/: mod.rs
wails-app/: README.md  go.mod  main.go  wails.json
wails-app/frontend/: index.html  package.json  package.json.md5  tailwind.config.js  tsconfig.json
wails-app/frontend/src/: index.css  main.tsx
wails-app/frontend/src/ui/: App.tsx
