[package]
name = "vibe-coder"
version = "0.1.0"
edition = "2021"
authors = ["Vibe Coder Team"]
description = "An AI coding console for macOS with plugin support"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
pulldown-cmark = "0.9"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
mockall = "0.12"
